showing survey interface

--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="apis/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
+        <link rel="stylesheet" href="apis/jquery.bxslider/jquery.bxslider.css"/>
+        <link rel="stylesheet" href="css/surveyInterface.css"/>
         <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
@@ -18,10 +20,8 @@ and open the template in the editor.
             Modo encuesta
         </div>
         <div class="wrapper">
-            <div class="container">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="surveyQuestions"></div>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 surveyBuilderContainer">
+                <div id="surveyBuilderContainer"></div>
             </div>
         </div>
     </body>
