survey interface css

--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -12,14 +12,24 @@ and open the template in the editor.
         <link rel="stylesheet" href="apis/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="apis/jquery.bxslider/jquery.bxslider.css"/>
+        <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/surveyInterface.css"/>
         <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
-        <div class="title-page">
-            Modo encuesta
-        </div>
-        <div class="wrapper">
+        <div id="pageWrapper">
+            <div class="background-survey-interface"></div>
+            <div class="searcher-content">
+                <div class="navbar">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
+                        </div>
+                        
+                </div>
+            </div>
+            
+            </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 surveyBuilderContainer">
                 <div id="surveyBuilderContainer"></div>
             </div>
