--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -31,7 +31,7 @@ and open the template in the editor.
             
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 surveyBuilderContainer">
-                <div id="surveyBuilderContainer"></div>
+                <div id="slider" class="slider-content"></div>
             </div>
         </div>
     </body>
