adding css to survey interface

--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -20,15 +20,20 @@ and open the template in the editor.
         <div id="pageWrapper">
             <div class="background-survey-interface"></div>
             <div class="searcher-content">
-                <div class="navbar">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
-                        </div>
-                        
+                <div class="navbar message-mode">
+                    <div class="navbar-header">
+                        <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
+                    </div>
+                    <div class="navbar-collapse collapse navbar-title">
+                        <ul class="nav nav-justified">
+                            <li><a href="#" class="navbar-brand survey-title"></a></li>
+                        </ul>
+                    </div>
+                    <div class="nav navbar-nav navbar-right">
+                        <button class="btn btn-default btn-lg">Salir de encuesta</button>
+                    </div>
                 </div>
-            </div>
-            
+
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 surveyBuilderContainer">
                 <div id="slider" class="slider-content"></div>
