styles in survey interface

--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="apis/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
+        <link rel="stylesheet" href="apis/bootstrap-star-rating/css/star-rating.css"/>
         <link rel="stylesheet" href="apis/jquery.bxslider/jquery.bxslider.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/surveyInterface.css"/>
