--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -39,12 +39,47 @@ and open the template in the editor.
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 surveyBuilderContainer">
                 <div id="slider" class="slider-content"></div>
             </div>
+            <div id="anonContent" class="" style="display: none">
+                <div class="questionContainer list-group">
+                    <div class="form-horizontal">
+                        <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Nombre</label>
+                            <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+                                <input type="text" class="form-control" placeholder="Nombre">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Teléfono</label>
+                            <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+                                <input type="text" class="form-control" placeholder="Teléfono">
+                            </div>
+                        </div>
+                    </div>                  
+                </div>
+                <div class="questionContainer list-group">
+                    <div class="form-horizontal">
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Email</label>
+                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                                <input type="text" class="form-control" placeholder="Email">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="questionContainer list-group">
+                    <div class="form-horizontal">
+                        <div class="checkbox col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <label><input type="checkbox" value="">Acepto aviso de privacidad</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
     <script>
-        require(['main'], function() {
-            require(['jquery', 'surveyInterface'], function($, surveyInterface) {
-                $(document).ready(function() {
+        require(['main'], function () {
+            require(['jquery', 'surveyInterface'], function ($, surveyInterface) {
+                $(document).ready(function () {
                     surveyInterface.init({});
                 });
             });
