--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -13,6 +13,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="apis/bootstrap-star-rating/css/star-rating.css"/>
         <link rel="stylesheet" href="apis/jquery.bxslider/jquery.bxslider.css"/>
+        <link rel="stylesheet" href="apis/bootstrap-notify/notify.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/surveyInterface.css"/>
         <script data-main="js/main" src="apis/require.js"></script>
