--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -70,7 +70,7 @@ and open the template in the editor.
                 <div class="questionContainer list-group">
                     <div class="form-horizontal">
                         <div class="checkbox col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <label><input type="checkbox" value="" id="check-privacy">Acepto aviso de privacidad</label>
+                            <label><input type="checkbox" class="required" value="" id="check-privacy">Acepto aviso de privacidad</label>
                         </div>
                     </div>
                 </div>
