--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -46,13 +46,13 @@ and open the template in the editor.
                         <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                             <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Nombre</label>
                             <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                <input type="text" class="form-control" placeholder="Nombre">
+                                <input type="text" name="customer_name" class="form-control" placeholder="Nombre" fieldType="name">
                             </div>
                         </div>
                         <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                             <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Teléfono</label>
                             <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                <input type="text" class="form-control" placeholder="Teléfono">
+                                <input type="text" name="customer_telephone" class="form-control" placeholder="Teléfono" fieldType="telephone">
                             </div>
                         </div>
                     </div>                  
@@ -62,7 +62,7 @@ and open the template in the editor.
                         <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Email</label>
                             <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                <input type="text" class="form-control" placeholder="Email">
+                                <input type="text" name="customer_email" class="form-control" placeholder="Email" fieldType="email">
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@ and open the template in the editor.
                 <div class="questionContainer list-group">
                     <div class="form-horizontal">
                         <div class="checkbox col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <label><input type="checkbox" class="required" value="" id="check-privacy">Acepto aviso de privacidad</label>
+                            <label><input type="checkbox" name="customer_privacy" class="" value="" id="check-privacy">Acepto aviso de privacidad</label>
                         </div>
                     </div>
                 </div>
