remove hover on survey title bar

--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                     </div>
                     <div class="navbar-collapse collapse navbar-title">
                         <ul class="nav nav-justified">
-                            <li><a href="#" class="navbar-brand survey-title"></a></li>
+                            <li><text class="navbar-brand survey-title"></text></li>
                         </ul>
                     </div>
                     <div class="nav navbar-nav navbar-right">
