--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -87,15 +87,21 @@ and open the template in the editor.
                         </div>   
                     </div>
 
-                    <div class="list-group questionContainer col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <div class="questionContainer col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <div class="form-horizontal">
-                                <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Email</label>
-                                    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                        <input type="text" name="email" class="form-control" placeholder="Email" fieldType="email">
-                                    </div>
-                                </div>
+                    <div class="questionContainer col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Email</label>
+                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                                <input type="text" name="email" class="form-control" placeholder="Email" fieldType="email">
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                            <label class="col-xs-4 col-sm-4 col-md-3 col-lg-3">Género</label>
+                            <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9">
+                                <select name="gender" class="required form-control">
+                                    <option value="0">Soy...</option>
+                                    <option value="F">Mujer</option>
+                                    <option value="M">Hombre</option>
+                                </select>
                             </div>
                         </div>
                     </div>
