adding sync interface

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/home.css"/>
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
