--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
         <link rel="stylesheet" href="css/index.css"/>
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
