--- a/public_html/surveys.html
+++ b/public_html/surveys.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/surveys.css"/>
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
