--- a/public_html/products.html
+++ b/public_html/products.html
@@ -5,6 +5,7 @@
         <title>Miele</title>
         <link rel="stylesheet" href="/apis/bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" href="/css/Miele.css"/>
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script data-main="/js/main" src="/apis/require.js"></script>
     </head>
     <body>
