--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -16,6 +16,8 @@ and open the template in the editor.
         <link rel="stylesheet" href="apis/bootstrap-notify/notify.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/surveyInterface.css"/>
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+
         <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
