--- a/public_html/menu.html
+++ b/public_html/menu.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <head>
         <title>Miele</title>
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
