--- a/public_html/home.html
+++ b/public_html/home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Miele</title>
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
         <link rel="stylesheet" href="apis/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
