--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Miele</title>
-        <meta charset="UTF-8">
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
         <link rel="stylesheet" href="css/index.css"/>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
