--- a/public_html/products.html
+++ b/public_html/products.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" />
     <head>
         <title>Miele</title>
