--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -5,6 +5,9 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" />
+
     <head>
         <title>Nueva encuesta</title>
         <meta charset="UTF-8">
