local and remote login

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -15,7 +15,7 @@
         <div id="pageWrapper">
             <div class="container">
                 <div class="col-md-6 col-xs-6">
-                    <div class="productos-content side option" option="products">
+                    <div class="productos-content side option" > <!--attr option="products" -->
                         <span class="btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
                         <div>
                             <p><h1>Productos</h1></p>
