--- a/public_html/sync.html
+++ b/public_html/sync.html
@@ -22,9 +22,31 @@ and open the template in the editor.
         <div id="pageWrapper">
             <div class="container">
                 <span class="btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="sync-container">
                     <p>Usted esta apunto de sincronizar información con el servidor remoto de Miele, asegurese de tener una conexión a internet estable.</p>
-                    <button id="sync-now" class="btn btn-primary">Sincronizar ahora</button>
+                    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5">
+                        <div class="form-group">
+                            <label class="col-xs-12 col-sm-6 col-md-6 ">Usuario</label>
+                            <div class="col-xs-12 col-sm-6 col-md-6">
+                                <input type="text" class="form-control" id="user" name="user">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-xs-12 col-sm-6 col-md-6 ">Password</label>
+                            <div class="col-xs-12 col-sm-6 col-md-6">
+                                <input type="password" class="form-control" id="password" name="password">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="alert alert-danger login-alerts col-md-12" style="display: none">
+
+                            </div>
+                        </div>
+                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                            <button id="sync-now" class="btn btn-primary">Sincronizar ahora</button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
