--- a/public_html/sync.html
+++ b/public_html/sync.html
@@ -22,31 +22,34 @@ and open the template in the editor.
         <div id="pageWrapper">
             <div class="container">
                 <span class="btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="sync-container">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <p>Usted esta apunto de sincronizar información con el servidor remoto de Miele, asegurese de tener una conexión a internet estable.</p>
-                    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5">
-                        <div class="form-group">
-                            <label class="col-xs-12 col-sm-6 col-md-6 ">Usuario</label>
-                            <div class="col-xs-12 col-sm-6 col-md-6">
-                                <input type="text" class="form-control" id="user" name="user">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-xs-12 col-sm-6 col-md-6 ">Password</label>
-                            <div class="col-xs-12 col-sm-6 col-md-6">
-                                <input type="password" class="form-control" id="password" name="password">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="alert alert-danger login-alerts col-md-12" style="display: none">
-
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                            <button id="sync-now" class="btn btn-primary">Sincronizar ahora</button>
+                </div>
+                <div class="col-xs-12 col-sm-7 col-md-5 col-lg-5" id="sync-container">
+                    <div class="form-group row">
+                        <label class="col-xs-12 col-sm-3 col-md-3 ">Usuario</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <input type="email" class="form-control" id="user" name="user">
                         </div>
                     </div>
+                    <div class="form-group row">
+                        <label class="col-xs-12 col-sm-3 col-md-3 ">Password</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <input type="password" class="form-control" id="password" name="password">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="alert alert-danger login-alerts col-md-12" style="display: none">
 
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                        <button id="sync-now" class="btn btn-primary">Sincronizar ahora</button>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-5 col-md-7 col-lg-7">
+                    <label>Resultado</label>
+                    <textarea class="form-control result-container" id="result-container"></textarea>
                 </div>
             </div>
         </div>
