--- a/public_html/sync.html
+++ b/public_html/sync.html
@@ -20,8 +20,14 @@ and open the template in the editor.
     </head>
     <body>
         <div id="pageWrapper">
+            <nav class="navbar navbar-default" role="navigation">
+                <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
+                <div class="navbar-header">
+                    
+                    <a class="navbar-brand" href="#">Sincronizar aplicación</a>
+                </div>
+            </nav>
             <div class="container">
-                <span class="btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <p>Usted esta apunto de sincronizar información con el servidor remoto de Miele, asegurese de tener una conexión a internet estable.</p>
                 </div>
