--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -17,6 +17,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="apis/bootstrap-star-rating/css/star-rating.css"/>
         <link rel="stylesheet" href="apis/jquery.bxslider/jquery.bxslider.css"/>
         <link rel="stylesheet" href="apis/bootstrap-notify/notify.css"/>
+        <link rel="stylesheet" href="apis/jquery-ui/jquery-ui.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/surveyInterface.css"/>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
@@ -67,14 +68,16 @@ and open the template in the editor.
                                     <input type="text" name="last_name" class="form-control" placeholder="Apellido materno" fieldType="name">
                                 </div>
                             </div>
-
-                            <!--
+                            
                             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                 <label class="col-xs-6 col-sm-6 col-md-5 col-lg-5">Fecha de nacimiento</label>
                                 <div class="col-xs-6 col-sm-6 col-md-7 col-lg-7">
-                                    <input type="text" name="birthday" class="form-control" placeholder="Fecha de nacimiento">
+                                    <input type="text" id="birthday" name="birthday" class="form-control" placeholder="Fecha de nacimiento" readonly="true">
                                 </div>
                             </div>
+
+                            <!--
+                            
                             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                 <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Teléfono</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
