--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -45,6 +45,9 @@ and open the template in the editor.
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 surveyBuilderContainer">
                 <div id="slider" class="slider-content"></div>
+                <div class="footer-Wrapper">
+                    <img src="img/logo-bar.png">
+                </div>
             </div>
             <div id="anonContent" class="master" style="display: none">
                 <form id="form-anon">
@@ -53,13 +56,13 @@ and open the template in the editor.
                             <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                 <label class="col-xs-3 col-sm-2 col-md-2 col-lg-2">Nombre</label>
                                 <div class="col-xs-9 col-sm-10 col-md-10 col-lg-10">
-                                    <input type="text" name="name" class="form-control" placeholder="Nombre" fieldType="name">
+                                    <input type="text" name="name" class="form-control required" placeholder="Nombre" fieldType="name">
                                 </div>
                             </div>
                             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                 <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Apellido paterno</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="text" name="mothers_last_name" class="form-control" placeholder="Apellido paterno" fieldType="name">
+                                    <input type="text" name="mothers_last_name" class="form-control required" placeholder="Apellido paterno" fieldType="name">
                                 </div>
                             </div>
                             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
@@ -99,14 +102,14 @@ and open the template in the editor.
                         <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2">Email</label>
                             <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-                                <input type="text" name="email" class="form-control" placeholder="Email" fieldType="email">
+                                <input type="email" name="email" class="form-control required" placeholder="Email" fieldType="email">
                             </div>
                         </div>
                         <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
                             <label class="col-xs-4 col-sm-4 col-md-3 col-lg-3">Género</label>
                             <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9">
-                                <select name="gender" class="required form-control">
-                                    <option value="0">Soy...</option>
+                                <select name="gender" class="form-control">
+                                    <option value="N/E">Soy...</option>
                                     <option value="F">Mujer</option>
                                     <option value="M">Hombre</option>
                                 </select>
