--- a/public_html/surveyInterface.html
+++ b/public_html/surveyInterface.html
@@ -62,13 +62,13 @@ and open the template in the editor.
                             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                 <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Apellido paterno</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="text" name="mothers_last_name" class="form-control required" placeholder="Apellido paterno" fieldType="name">
+                                    <input type="text" name="last_name" class="form-control required" placeholder="Apellido paterno" fieldType="name">
                                 </div>
                             </div>
                             <div class="form-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                 <label class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Apellido materno</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="text" name="last_name" class="form-control" placeholder="Apellido materno" fieldType="name">
+                                    <input type="text" name="mothers_last_name" class="form-control" placeholder="Apellido materno" fieldType="name">
                                 </div>
                             </div>
                             
