--- a/public_html/login.html
+++ b/public_html/login.html
@@ -63,7 +63,7 @@
 
             </div>
         </div>
-        <footer class="footer col-xs-12">
+        <footer class="footer">
             <div>
                 <img src="img/logo-bar.png">
             </div>
