--- a/public_html/login.html
+++ b/public_html/login.html
@@ -14,6 +14,9 @@
 
         </div>
         <div class="container login-wrapper">
+             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                <img src="img/logo.png" class="login-miele-logo">
+            </div>
             <div class="container col-xs-3 col-md-4">
 
             </div>
@@ -65,7 +68,7 @@
         </div>
         <footer class="footer">
             <div>
-                <img src="img/logo-bar.png">
+                
             </div>
         </footer>
     </body>
