Added lines, sublines and product views

--- a/public_html/sublines.html
+++ b/public_html/sublines.html
@@ -3,12 +3,12 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, target-densityDpi=device-dpi" />
     <head>
-        <title>Productos</title>
+        <title>Sublineas</title>
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
         <link rel="stylesheet" href="/apis/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
-        <link rel="stylesheet" href="css/products.css"/>
+        <link rel="stylesheet" href="css/sublines.css"/>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script data-main="/js/main" src="/apis/require.js"></script>
     </head>
@@ -45,7 +45,7 @@
 
     <script>
         require(['main'], function () {
-            require(['product'], function (home) { 
+            require(['subline'], function (home) { 
                 home.init();
             });
         });
