--- a/public_html/menu.html
+++ b/public_html/menu.html
@@ -21,13 +21,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#">- Home</a>
                     </li>
                     <li>
-                        <a href="#">Cerra Sesión</a>
+                        <span><a href="#">- Cerra Sesión</a></span> 
                     </li>
                     <li>
-                        <a href="#">Overview</a>
+                        <a href="#">- Overview</a>
                     </li>
                 </ul>
             </div>
