--- a/public_html/productDesc.html
+++ b/public_html/productDesc.html
@@ -40,6 +40,71 @@
                 </div>
             </div>
             <div class="col-sm-12 boxes-content" id="boxContent"></div>
+
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+              <!-- Modal content -->
+              <div class="modal-content">
+                <div class="modal-header">
+                    <span class="close">&times;</span>
+                    <h2>Modal Header</h2>
+                </div>
+                <div class="modal-body">
+                    <!-- Slideshow container -->
+                    <div class="slideshow-container">
+
+                        <!-- Full-width images with number and caption text -->
+                        <div class="mySlides">
+                            <div class="numbertext">1 / 5</div>
+                            <img class="slider-img" src="https://shop.miele.com.mx/811-home_default/lavadora-w1.jpg">
+                            <div class="text">Caption Text</div>
+                        </div>
+
+                        <div class="mySlides">
+                            <div class="numbertext">2 / 5</div>
+                            <img class="slider-img" src="https://shop.miele.com.mx/821-home_default/lavadora-w1.jpg">
+                            <div class="text">Caption Two</div>
+                        </div>
+
+                        <div class="mySlides">
+                            <div class="numbertext">3 / 5</div>
+                            <img class="slider-img" src="https://shop.miele.com.mx/824-home_default/lavadora-w1.jpg">
+                            <div class="text">Caption Three</div>
+                        </div>
+
+                        <div class="mySlides">
+                            <div class="numbertext">4 / 5</div>
+                            <img class="slider-img" src="https://shop.miele.com.mx/822-home_default/lavadora-w1.jpg">
+                            <div class="text">Caption Four</div>
+                        </div>
+
+                        <div class="mySlides">
+                            <div class="numbertext">5 / 5</div>
+                            <img class="slider-img" src="https://shop.miele.com.mx/823-home_default/lavadora-w1.jpg">
+                            <div class="text">Caption Five</div>
+                        </div>
+
+                        <!-- Next and previous buttons -->
+                        <a class="prev">&#10094;</a>
+                        <a class="next">&#10095;</a>
+                    </div>
+                    <br>
+
+                </div>
+                <div class="modal-footer">
+                    <!-- The dots/circles -->
+                    <div style="text-align:center">
+                        <span id="1"><img class="dot-img" src="https://shop.miele.com.mx/811-home_default/lavadora-w1.jpg"></span> 
+                        <span id="2"><img class="dot-img" src="https://shop.miele.com.mx/821-home_default/lavadora-w1.jpg"></span> 
+                        <span id="3"><img class="dot-img" src="https://shop.miele.com.mx/824-home_default/lavadora-w1.jpg"></span>
+                        <span id="4"><img class="dot-img" src="https://shop.miele.com.mx/822-home_default/lavadora-w1.jpg"></span> 
+                        <span id="5"><img class="dot-img" src="https://shop.miele.com.mx/823-home_default/lavadora-w1.jpg"></span>  
+                    </div>
+                </div>
+              </div>
+            </div>
+            <!-- The Modal -->
         </div>
     </body> 
 
