--- a/public_html/productDesc.html
+++ b/public_html/productDesc.html
@@ -86,6 +86,10 @@
                         </div>
 
                         <!-- Next and previous buttons -->
+                        <!-- 
+                        <a class="prev">&#9666;</a>
+                        <a class="next">&#9656;</a>
+                        -->
                         <a class="prev">&#10094;</a>
                         <a class="next">&#10095;</a>
                     </div>
@@ -95,11 +99,11 @@
                 <div class="modal-footer">
                     <!-- The dots/circles -->
                     <div style="text-align:center">
-                        <span id="1"><img class="dot-img" src="https://shop.miele.com.mx/811-home_default/lavadora-w1.jpg"></span> 
-                        <span id="2"><img class="dot-img" src="https://shop.miele.com.mx/821-home_default/lavadora-w1.jpg"></span> 
-                        <span id="3"><img class="dot-img" src="https://shop.miele.com.mx/824-home_default/lavadora-w1.jpg"></span>
-                        <span id="4"><img class="dot-img" src="https://shop.miele.com.mx/822-home_default/lavadora-w1.jpg"></span> 
-                        <span id="5"><img class="dot-img" src="https://shop.miele.com.mx/823-home_default/lavadora-w1.jpg"></span>  
+                        <span><img class="dot-img" id="1" src="https://shop.miele.com.mx/811-home_default/lavadora-w1.jpg"></span> 
+                        <span><img class="dot-img" id="2" src="https://shop.miele.com.mx/821-home_default/lavadora-w1.jpg"></span> 
+                        <span><img class="dot-img" id="3" src="https://shop.miele.com.mx/824-home_default/lavadora-w1.jpg"></span>
+                        <span><img class="dot-img" id="4" src="https://shop.miele.com.mx/822-home_default/lavadora-w1.jpg"></span> 
+                        <span><img class="dot-img" id="5" src="https://shop.miele.com.mx/823-home_default/lavadora-w1.jpg"></span>  
                     </div>
                 </div>
               </div>
